# petits_programmes

2048/: .nfs0000000009b10d3a000013fc  .nfs0000000009b1651400001401  2048  Makefile  README.md  gnl.c  leak_ncurses.cmd  res  run.sh  s  score.txt  score_page.c
2048/incs/: game.h
2048/srcs/: .print_game.c.swp  add_tile.c  atoi.c  end_screen.c  main.c  memalloc.c  memset.c  merge.c  move.c  play_game.c  play_round.c  printMap.c  print_game.c  print_num_ascii_art.c  score_page.c  str_new.c  strjoin.c
YASL/: .gitattributes  .gitignore  Makefile  README.md  run.sh
YASL/ressources/: colors0.b64  faulty3.rgb.b64  yasl_linux
YASL/src/display/: backup  display_b64  hq  knowledge.txt  run.sh
YASL/src/ex00/: yasl_hw
YASL/src/ex01/: alt_decrement  alt_for  yasl_aff_param
YASL/src/ex02/: alt_mass  yasl_do
YASL/src/ex03/: yasl_repeat
YASL/src/ex04/: alt_recur  yasl_fact
YASL/src/ex05/: yasl_split
YASL/src/ex06/: yasl_interactive
YASL/src/test_to_learn/: equal  is_square  limit  list_count  print_stack
game/2048/: Makefile  README.md  score.txt
game/2048/incs/: game.h
game/2048/srcs/: add_tile.c  end_screen.c  ft_itao.c  game_over.c  play_game.c  print_num_ascii_art.c  strcat.c  strcpy.c  strdup.c
game/connect4/: Makefile
game/connect4/Libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isatoiable.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_satoi.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strjoin2.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  (+14 more)
game/connect4/inc/: connect4.h
game/connect4/src/: checks.c  connect4.c  display.c  ia.c  init_destroy.c  moves.c  score_utils.c  utils.c
game/cub3D/: .gitignore  Makefile  README.md  run.sh
game/cub3D/image/: 1.xpm  2.xpm  3.xpm  4.xpm  door.xpm  flamme.xpm  glasse.xpm  tet.xpm  wood.xpm
game/cub3D/map/: game.cub  test.cub  test2.cub
game/so_long/: README.md  demo.sh  game.sh
game/so_long/libft/: .ft_strjoin.c.swp  .libft.h.swp  strsplit.c
game/so_long/map_test/: .map_valid.ber.swp  map_no_player.ber  map_valid.ber
game/so_long/srcs_bonus/: draw_bonus.c  draw_utils.c  error.c  init_img.c  init_size_screen.c  keycode.c  main_bonus.c  (+3 more)
game/to_long/: Makefile  README.md  config.txt
game/wordle/: CMakeLists.txt  build.sh  main.cpp
game/wordle/libwordle/: CMakeLists.txt  wordle.cpp  wordle.hpp
(+82 files in other folders)
